--- a/Week-1/01.md
+++ b/Week-1/01.md
@@ -40,4 +40,6 @@ Horizontal scaling is increasing the number of servers by replicating the applic
 5. What is SEO (Search Engine Optimization), and how can web developers optimize their websites for better search engine rankings?
 SEO is optimizing an application code such that it appears as high as possible on search engine results. i.e. When someone searches for something usually the most relevant content is at the top of the page but if an application hasn't used the right html approach even if content of application is most relevant it might not come up on top of the page.
 The key difference between SEO and paid advertising is that users don’t pay to be in that space.
-Developers can optimize their websites by making the website mobile-friendly, make use of prescribed domains (.com .in .ai etc), having a social media presence, increasing the load time, making use of keywords, making use of relevant content, making use of backlink, having a proper site architecture etc.
+Developers can optimize their websites by making the website mobile-friendly, make use of prescribed domains (.com .in .ai etc), having a social media presence, increasing the load time, making use of keywords, making use of relevant content, making use of backlink, having a proper site architecture etc..
+
+
